[package]
name = "semsan"
version = "0.1.0"
authors = ["Niklas Goegge <niklas@brink.dev>"]
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive", "string"] }
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", branch = "main" }
serde = "1.0.200"

[[bin]]
name = "semsan"
path = "src/main.rs"
