[package]
name = "semsan"
version = "0.1.0"
authors = ["Niklas Goegge <niklas@brink.dev>"]
edition = "2021"

[features]
qemu = []
qemu_be = ["qemu", "libafl_qemu/be", "dep:libafl_qemu"]
# These are mutually exclusive: SemSan can only be compiled to support one
# libafl_qemu architecture at a time.
qemu_x86_64 = ["qemu", "libafl_qemu/x86_64", "dep:libafl_qemu", "dep:libafl_targets"]   # amd64
qemu_aarch64 = ["qemu", "libafl_qemu/aarch64", "dep:libafl_qemu", "dep:libafl_targets"] # arm64
qemu_i386 = ["qemu", "libafl_qemu/i386", "dep:libafl_qemu", "dep:libafl_targets"]
qemu_arm = ["qemu", "libafl_qemu/arm", "dep:libafl_qemu", "dep:libafl_targets"]

[dependencies]
clap = { version = "4.3.0", features = ["derive", "string"] }
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.1" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.1" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.1", optional = true }
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL.git", tag = "0.15.1", features = ["usermode"], optional = true }
libc = "0.2.155"
serde = "1.0.200"

[[bin]]
name = "semsan"
path = "src/main.rs"

[[bin]]
name = "semsan-x86_64"
path = "src/main.rs"
required-features = ["qemu_x86_64"]

[[bin]]
name = "semsan-aarch64"
path = "src/main.rs"
required-features = ["qemu_aarch64"]

[[bin]]
name = "semsan-i386"
path = "src/main.rs"
required-features = ["qemu_i386"]

[[bin]]
name = "semsan-arm"
path = "src/main.rs"
required-features = ["qemu_arm"]
